crates/barista-config/tests/snapshots/effective__all_six_layers.snap
---
source: crates/barista-config/tests/effective.rs
expression: sb.redact(&rendered)
---
=== effective config ===
compat.excluded-modules            = ["big-mod"]
daemon.enabled                     = true
daemon.idle-shutdown-secs          = 120
daemon.max-heap                    = <unset>
daemon.socket-dir                  = "<HOME>/.barista/run"
logging.level                      = "trace"
logging.maven-shape                = false
maven-settings.active-profiles     = []
maven-settings.interactive-mode    = true
maven-settings.local-repository    = "/srv/m2"
maven-settings.mirrors             = []
maven-settings.offline             = false
maven-settings.plugin-groups       = []
maven-settings.profiles            = []
maven-settings.proxies             = []
maven-settings.servers             = []
maven.compat-mode                  = three-nine
maven.honor-jvm-config             = true
maven.honor-mvn-config             = true
network.http2-enabled              = true
network.max-concurrent-connections = 20
network.proxy                      = <unset>
network.request-timeout-secs       = 30
paths.cache-dir                    = "<HOME>/.barista/cache"
paths.m2-repository                = "/srv/m2"
paths.settings-xml                 = "<HOME>/.m2/settings.xml"
paths.user-config-dir              = "<HOME>/.barista"
project-extensions                 = <unset>
telemetry.client-id                = "abc-123"
telemetry.enabled                  = true
telemetry.endpoint                 = <unset>
telemetry.transport-enabled        = false

=== audit ===
defaults         <-                                          [<all>]
user-config      <- "<HOME>/.barista/config.toml"            [network.request-timeout-secs, telemetry.client-id, telemetry.enabled]
project-config   <- "<PROJ>/barista.toml"                    [compat.excluded-modules, logging.level]
settings-xml     <- "<HOME>/.m2/settings.xml"                [paths.m2-repository]
environment      <-                                          [daemon.idle-shutdown-secs, maven.compat-mode]
cli              <-                                          [logging.level, network.max-concurrent-connections]
